--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.
                     </p>
                 </div>
-                <a class="flex btn" href="#">Portfolio
+                <a class="flex btn" href="portfolio.html">Portfolio
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
@@ -125,7 +125,7 @@
                         If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
                     </p>
                 </div>
-                <a class="flex btn" href="#">Contact Me
+                <a class="flex btn" href="contact.html">Contact Me
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
