--- a/pingus-quest.html
+++ b/pingus-quest.html
@@ -170,11 +170,13 @@
         <!-- Trailer -->
         <section>
             <h3 class="lined">Game Trailer</h3>
-            <video controls>
-                <source src="docs/pingus-quest-trailer.mp4" type="video/mp4">
-                <source src="docs/pingus-quest-trailer.ogg" type="video/ogg">
-                Sorry, but your browser doesn't support the video tag.
-            </video>
+            <div>
+                <video controls>
+                    <source src="docs/pingus-quest-trailer.mp4" type="video/mp4">
+                    <source src="docs/pingus-quest-trailer.ogg" type="video/ogg">
+                    Sorry, but your browser doesn't support the video tag.
+                </video>
+            </div>
         </section>
     </main>
     <footer>
